# armar-server

./: .gitignore  .hadolint.yaml  .qmllint.ini  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.ai/: ai-changelog.md  improvement-hypotheses.md  learnings.md
.ai/templates/: design.md  tasks.md
.claude/skills/ai-changelog/: SKILL.md
.claude/skills/ai-docs-lookup/: SKILL.md
.claude/skills/ai-improvement-tracker/: SKILL.md
.claude/skills/analyze-logs/: SKILL.md
.claude/skills/analyze-logs/references/: analysis-examples.md  docker-log-format.md  gcp-log-fields.md  gcp-query-templates.md  realtime-session-events.md  task-file-template.md
.claude/skills/branch-switch/: SKILL.md
.claude/skills/commit-message/: SKILL.md
.claude/skills/flatpak-development/: SKILL.md
.claude/skills/flatpak-development/references/: flathub-publishing.md  manifest-reference.md  sandbox-permissions.md
.claude/skills/kirigami/: SKILL.md
.claude/skills/kirigami/references/: components-catalog.md  (+2 more)
.claude/skills/learning-consolidator/: SKILL.md
.claude/skills/parallel-deep-research/: SKILL.md
.claude/skills/plan-critic/: SKILL.md
.claude/skills/post-task-review/: SKILL.md
.claude/skills/product-brief/: SKILL.md
.claude/skills/prompt-domain-reviewer/: SKILL.md
.claude/skills/prompt-eng-reviewer/: SKILL.md
.claude/skills/prompt-engineering-conventions/: SKILL.md
.claude/skills/python-best-practices/: SKILL.md
.claude/skills/qtquick2/: SKILL.md
.claude/skills/react-best-practices/: SKILL.md
.claude/skills/research-source-claim/: SKILL.md
.claude/skills/research-source-planner/: SKILL.md
.claude/skills/review-prompts/: SKILL.md
.claude/skills/session-retrospective/: SKILL.md
.claude/skills/skill-content-reviewer/: SKILL.md
.claude/skills/skill-creation-workflow/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/skill-researcher/: SKILL.md
.claude/skills/skill-reviewer/: SKILL.md
.claude/skills/spec-driven-dev/: SKILL.md
.claude/skills/task-learnings/: SKILL.md
.claude/skills/test-conventions/: README.md  SKILL.md
.claude/skills/typescript-best-practices/: SKILL.md
.claude/skills/uv-python-tooling/: SKILL.md
.claude/skills/vertical-slice/: SKILL.md
.claude/skills/web-dev-best-practices/: SKILL.md
.cursor/rules/: code-quality.md  error-handling.md  feature-development.md  logging.md  plan-critic.mdc  post-task-review.md  spec-driven-dev.md  test-conventions.mdc  testing.md
.github/workflows/: cd.yml  ci.yml
.specs/multi-server-desktop/: design.md  requirements.md  tasks.md
.specs/multi-server-desktop-p1/: spec.md
.specs/multi-server-desktop-p4/: spec.md
docker/: Dockerfile  entrypoint.sh
flatpak/: io.github.Reidond.ArmarManager.desktop  io.github.Reidond.ArmarManager.metainfo.xml  io.github.Reidond.ArmarManager.yaml  io.github.anomalyco.ArmarManager.desktop  io.github.anomalyco.ArmarManager.metainfo.xml  io.github.anomalyco.ArmarManager.yaml  python3-deps.aarch64.json  python3-deps.x86_64.json
install/: install.sh
scripts/: build-flatpak.sh  gen-flatpak-deps.sh  qmllint.sh  release.py
src/armar_server/: __init__.py  __main__.py  cli.py  logging.py
src/armar_server/config/: __init__.py  loader.py  models.py  settings.py
src/armar_server/server/: __init__.py  config_builder.py  runtime.py  scenarios.py  systemd.py
src/armar_server/workshop/: client.py  parser.py
tests/: test_client.py  test_config_builder.py  test_loader.py  test_parser.py  test_release.py  test_resolver.py  test_scenarios.py
(+40 files in other folders)
