[project]
name = "armar-server"
version = "0.1.0"
description = "uv-managed CLI to run a modded Arma Reforger dedicated server in a container, with mods parsed from Arma Workshop URLs."
readme = "README.md"
authors = [
    { name = "Andrii Shafar", email = "andriishafar69@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "tomli-w>=1.2.0",
    "typer>=0.26.8",
]

[project.scripts]
armar = "armar_server.cli:app"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".claude", ".ai", "docs", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "C4",            # comprehensions
    "RUF",           # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
# Typer's parameter-default idiom is intentional, not a B008 bug.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
extraPaths = ["tests"]  # tests import sibling `factories` helper (pytest prepend mode)
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
