[tool.uv]
# Virtual workspace root — no [project], no [build-system], no scripts.
# Member packages live under `packages/`.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
armar-core = { workspace = true }
armar-cli = { workspace = true }
armar-agentd = { workspace = true }
armar-manager = { workspace = true }

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
]
lint = [
    { include-group = "dev" },
    "actionlint-py>=1.7.0",
    "shellcheck-py>=0.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/armar-core/src", "packages/armar-core/tests", "packages/armar-cli/armar_cli"]
extend-exclude = [".claude", ".ai", "docs", ".venv", "packages/*/build", "packages/*/dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "RUF",
    "S",
]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]
[tool.ruff.lint.per-file-ignores]
"packages/armar-agentd/**" = ["S104"]  # bind addresses are loopback
"packages/armar-manager/**" = ["S104"]
"packages/armar-core/tests/**" = ["S101"]  # `assert` is the whole point of tests
"packages/*/tests/**" = ["S101", "S105", "S106"]  # tests use dummy tokens/passwords
"tests/**" = ["S101"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = [
    "packages/armar-core/src",
    "packages/armar-core/tests",
    "packages/armar-cli/armar_cli",
    "packages/armar-agentd/src",
    "packages/armar-manager/src",
]
extraPaths = ["packages/armar-core/tests"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["packages/*/tests", "tests"]
addopts = "-q"
pythonpath = ["packages/armar-core", "packages/armar-agentd", "scripts"]
